[gd_scene load_steps=5 format=3 uid="uid://sqy3ak3goim2"]

[ext_resource type="Script" uid="uid://14hnvr8qqkfs" path="res://scripts/menus/controls_menu.gd" id="1_5qlyv"]
[ext_resource type="FontFile" uid="uid://e0dk132vrmf8" path="res://assets/Pixel Bug.otf" id="2_d0u3u"]
[ext_resource type="PackedScene" uid="uid://d18aq1dt35mtn" path="res://scenes/menus/controls_background.tscn" id="2_n0kuk"]
[ext_resource type="PackedScene" uid="uid://bk6j0x0hdlfb6" path="res://scenes/crt.tscn" id="4_n0kuk"]

[node name="ControlsMenu" type="Control"]
z_index = 100
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5qlyv")

[node name="ControlsBackground" parent="." instance=ExtResource("2_n0kuk")]
layer = 2
offset = Vector2(0, 400)
scale = Vector2(2.5, 2.5)
transform = Transform2D(2.5, 0, 0, 2.5, 0, 400)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.43137255)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_d0u3u")
theme_override_font_sizes/font_size = 48
text = "CONTROLS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlsList" type="GridContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/h_separation = 20
columns = 2

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ListeningLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_d0u3u")
theme_override_font_sizes/font_size = 28
text = "Press any key..."
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ResetControlsButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_d0u3u")
theme_override_font_sizes/font_size = 32
text = "Reset to Defaults"

[node name="BackButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_d0u3u")
theme_override_font_sizes/font_size = 32
text = "Go Back"

[node name="CRT" parent="CanvasLayer" instance=ExtResource("4_n0kuk")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1040.0
offset_top = -600.0
offset_right = 960.0
offset_bottom = 600.0
